# pico_enc28j60_lwip_freertos

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  main.cpp
FreeRTOS_port/: enc_os_lwip_glue.cpp
app/: FreeRTOSConfig.h  enc_os_lwip_glue.cpp  enc_os_lwip_glue.h  hooks.c  lwipopts.h
enc28j60/: CMakeLists.txt
enc28j60/include/: enc28j60.h  enc28j60_registers.h
enc28j60/src/: enc28j60.cpp
hal/: CMakeLists.txt
hal/include/: alarm.h  gpio_wrapper.h  igpio.h  ispi.h  spi.h  utils.h
hal/src/: alarm.cpp  gpio_wrapper.cpp  spi.cpp  utils.cpp
scripts/: format-code.sh
